--- a/src/app/UI/alta-publicacion/alta-publicacion.component.scss
+++ b/src/app/UI/alta-publicacion/alta-publicacion.component.scss
@@ -17,3 +17,18 @@ ion-avatar{
     width: 50%;
     height: 50%;
 }
+
+.ubicacion-icon:hover{
+    background: #e6e2e2;
+    border-radius: 5px;
+}
+
+.enlace-icon:hover{
+    background: #e6e2e2;
+    border-radius: 5px;
+}
+
+.file-icon:hover{
+    background: #e6e2e2;
+    border-radius: 5px;
+}
