--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -5,15 +5,10 @@
     <ion-row >
       <ion-col size-md="8" offset-md="2">
         <ion-card style="background-color:white">
-          <ion-card-header color=tertiary>
-            <ion-card-title  class="ion-text-center">Personas que quizas te interesen</ion-card-title>
+          <ion-card-header color=tertiary style="background:#022833">
+            <ion-card-title  class="ion-text-center header">Personas que quizas te interesen</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-item-divider>
-              <ion-label class="header">
-                Lista de usuarios:
-              </ion-label>
-            </ion-item-divider>
             <ion-content id="test">
             <ion-list>
               <ion-item *ngFor="let amigo of amigos" >
