--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -16,20 +16,27 @@
   --padding-start: 8px;
 }
 
+.chat-card{
+  background:white;
+  width: 50%;
+  margin: 0 auto;
+}
+
 .message {
   padding: 10px !important;
   border-radius: 10px !important;
   margin-bottom: 4px !important;
   white-space: pre-wrap;
+  background: red;
 }
 
 .my-message {
-  background: var(--ion-color-tertiary);
-  color: #fff;
+  background: #85aecc;
+  color: #ffffff;
 }
 
 .other-message {
-  background: var(--ion-color-secondary);
+  background: #a88371;
   color: #fff;
 }
 
@@ -101,4 +108,10 @@ ion-item {
 .label-input, .label-input ion-icon {
   width: 100%;
   height: 100%;
+}
+
+@media(max-width: 745px){
+  .chat-card{
+    width:100%;
+  }
 }
