--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -1,6 +1,7 @@
+<app-navbar></app-navbar>
 <ion-content>
   <ion-grid>
-    <ion-card-header color=tertiary>
+    <ion-card-header color=tertiary style="background:#022833">
       <ion-button  name="contact"  (click)="presentPopover($event)">
         <ion-icon name="list-outline"></ion-icon>
       </ion-button>  
