--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -15,7 +15,7 @@
               </ion-item>
             </ion-list>
             <ion-item>
-              <ion-button slot="end" (click)="onAplicar()">APLICAR</ion-button>
+              <ion-button style="--background:#3f83a8" slot="end" (click)="onAplicar()">APLICAR</ion-button>
             </ion-item>
           </ion-card-content>
         </ion-card>
@@ -33,7 +33,7 @@
               </ion-item>
             </ion-list>
             <ion-item>
-              <ion-button slot="end" (click)="onAplicar()">APLICAR</ion-button>
+              <ion-button style="--background:#3f83a8" slot="end" (click)="onAplicar()">APLICAR</ion-button>
             </ion-item>
           </ion-card-content>
         </ion-card>
