--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -1,24 +1,16 @@
-<ion-header [translucent]="true" *ngIf="creando || editando">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button icon="chevron-back-outline" class="pointer" text=""></ion-back-button>
-    </ion-buttons>
-
-    <ion-title>{{ editando ? 'Editar' : 'Alta' }} Evento</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<app-navbar *ngIf="!creando && !editando"></app-navbar>
-
+<app-navbar></app-navbar>
 
 <ion-content  *ngIf="creando || editando">
   <ion-grid class="main-grid">
-    <ion-card style="background:white">
+    <ion-card class="card-evento">
+      <ion-card-header color=tertiary style="background:#022833">
+        <ion-card-title  class="ion-text-center header"> {{ editando ? 'Editar' : 'Alta' }} evento</ion-card-title>
+      </ion-card-header>
       <ion-row>
         <ion-col size="4" size-md="2" size-xs="12">
           <ion-label class="text-header">Nombre</ion-label>
         </ion-col>
-        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+        <ion-col size="8" size-md="7" size-lg="5" size-xs="12">
           <ion-input type="text" [(ngModel)]="evento.nombre" placeholder="Ej: Recorrido por la ciudad"></ion-input>
         </ion-col>
       </ion-row>
@@ -26,7 +18,7 @@
         <ion-col size="4" size-md="2" size-xs="12">
           <ion-label class="text-header">Descripción</ion-label>
         </ion-col>
-        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+        <ion-col size="8" size-md="7" size-lg="5" size-xs="12">
           <ion-textarea rows="4" [(ngModel)]="evento.descripcion" placeholder="Descripción">
           </ion-textarea>
         </ion-col>
@@ -35,7 +27,7 @@
         <ion-col size="4" size-md="2" size-xs="12">
           <ion-label class="text-header" >Imagen</ion-label>
         </ion-col>
-        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+        <ion-col size="8" size-md="7" size-lg="5" size-xs="12">
           <label for="fileInput" class="label-input cursor"><ion-icon name="camera-outline" slot="icon-only"></ion-icon></label>
           <img [src]="imageSource" style="width: 100%; min-height: 100px;" *ngIf="evento.imagen">
             <input type="file" id="fileInput" (change)="uploadFile($event)" class="ion-hide" accept="image/*"/>
@@ -45,7 +37,7 @@
         <ion-col size="4" size-md="2" size-xs="12">
           <ion-label class="text-header">Ubicación</ion-label>
         </ion-col>
-        <ion-col id="mapa" size="8" size-md="5" size-lg="3" size-xs="12">
+        <ion-col id="mapa" size="8" size-md="7" size-lg="5" size-xs="12">
           <app-mapa [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" [draggable]="true" [buscador]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
         </ion-col>
       </ion-row>
@@ -53,7 +45,7 @@
         <ion-col size="4" size-md="2" size-xs="12">
           <ion-label class="text-header">Inicio</ion-label>
         </ion-col>
-        <ion-col class="datepicker" size="7" size-md="3" size-lg="2" size-xs="10">
+        <ion-col class="datepicker" size="7" size-md="5" size-lg="4" size-xs="10">
           <ion-datetime #pickerInicio [min]="inicio" [(ngModel)]="inicio" (ionChange)="setMinFin($event)">
           </ion-datetime>
         </ion-col>
@@ -65,7 +57,7 @@
         <ion-col size="4" size-md="2" size-xs="12">
           <ion-label class="text-header">Fin</ion-label>
         </ion-col>
-        <ion-col class="datepicker" size="7" size-md="3" size-lg="2" size-xs="10">
+        <ion-col class="datepicker" size="7" size-md="5" size-lg="4" size-xs="10">
           <ion-datetime #pickerFin [min]="inicio" [(ngModel)]="fin">
           </ion-datetime>
         </ion-col>
@@ -75,9 +67,9 @@
       </ion-row>
       <ion-row>
         <ion-col size="4" size-md="2" size-xs="12">
-          <ion-label>Invitados</ion-label>
+          <ion-label class="text-header">Invitados</ion-label>
         </ion-col>
-        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+        <ion-col size="8" size-md="6" size-lg="5" size-xs="12">
           <ion-searchbar [formControl]="searchBar"></ion-searchbar>
         </ion-col>
         <ion-list #listItems *ngIf="searching">
@@ -102,7 +94,7 @@
       <ion-row>
         <ion-col size="2"></ion-col>
         <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
-          <ion-button expand="block" color="primary" [disabled]="!isValid()" (click)="submit()">Aceptar</ion-button>
+          <ion-button expand="block" style="--background:#3f83a8" [disabled]="!isValid()" (click)="submit()">Aceptar</ion-button>
         </ion-col>
       </ion-row>
     </ion-card>
