--- a/src/app/alta-evento/alta-evento.page.scss
+++ b/src/app/alta-evento/alta-evento.page.scss
@@ -13,6 +13,17 @@ ion-input::placeholder {
   font-style: italic;
 }
 
+.card-evento{
+  background:white;
+  width: 50%;
+  margin: 0 auto;
+}
+
+ion-row{
+  display: flex;
+  justify-content: center;
+}
+
 .text-header{
   font-family: 'big_noodle_titling';
   font-size: 25px;
@@ -97,4 +108,9 @@ ion-item::part(native) {
 
 .ml-2 {
   margin-left: 10px;
+}
+@media(max-width: 745px){
+  .card-evento{
+    width: 100%;
+  }
 }
