--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -1,50 +1,55 @@
 <app-navbar></app-navbar>
 
 <ion-content class="ion-padding">
-
-  <ion-grid *ngIf="chatting">
-    <ion-row *ngFor="let message of messages | async">
-      <ion-col size="9" class="message"
-        [offset]="message.miMsj ? 3 : 0"
-        [ngClass]="{ 'my-message': message.miMsj, 'other-message': !message.miMsj }">
-        <b>{{ message.nombreDe }}</b><br>
-        <span>{{ message.contenido }}
-        </span>
-        <ion-img *ngIf="message.path != ''" src="{{message.path}}"></ion-img>
-        <div class="time ion-text-right"><br>{{ message.fecha?.toMillis() | date:'short' }}</div>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-
-  <ion-list #listItems *ngIf="!chatting && searching">
-    <ion-item *ngFor="let friend of searchResult | async" (click)="chatWith(friend)" class="pointer">
-      <div class="circle">
-        <img src="{{friend.imgurl}}"/>
-      </div>
-      <div class="nombre-amigo">
-        <p>{{friend.nombre}} {{friend.apellido}}</p>
-      </div>
-    </ion-item>
-  </ion-list>
-
-  <ion-list *ngIf="!chatting">
-    <ion-item>
-      <ion-searchbar [formControl]="searchBar"></ion-searchbar>
-    </ion-item>
-    <ion-item *ngFor="let chatroom of chatrooms" class="pointer">
-      <div class="circle chat-thumbnail" (click)="goChatroom(chatroom)">
-        <img src="{{getFriendImage(chatroom)}}" />
-      </div>
-      <div class="nombre-amigo" (click)="goChatroom(chatroom)">
-        <p>{{ getChatroomName(chatroom) }}</p>
-      </div>
-      <ion-icon slot="end" name="trash-outline" (click)="eliminarAlert(chatroom)" size="small" class="pointer"></ion-icon>
-    </ion-item>
-    <ion-item *ngIf="chatrooms && chatrooms.length == 0">
-      Nada por aquí, busca algún amigo para iniciar una conversación.
-    </ion-item>
-  </ion-list>
-
+  
+  <ion-card class="chat-card">
+    <ion-card-header color=tertiary style="background:#022833">
+      <ion-card-title  class="ion-text-center header">Mis Chats</ion-card-title>
+    </ion-card-header>
+      <ion-grid *ngIf="chatting">
+        <ion-row *ngFor="let message of messages | async">
+          <ion-col size="9" class="message"
+          [offset]="message.miMsj ? 3 : 0"
+          [ngClass]="{ 'my-message': message.miMsj, 'other-message': !message.miMsj }">
+          <b>{{ message.nombreDe }}</b><br>
+          <span>{{ message.contenido }}
+          </span>
+          <ion-img *ngIf="message.path != ''" src="{{message.path}}"></ion-img>
+          <div class="time ion-text-right"><br>{{ message.fecha?.toMillis() | date:'short' }}</div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+    
+    <ion-list #listItems *ngIf="!chatting && searching">
+      <ion-item *ngFor="let friend of searchResult | async" (click)="chatWith(friend)" class="pointer">
+        <div class="circle">
+          <img src="{{friend.imgurl}}"/>
+        </div>
+        <div class="nombre-amigo">
+          <p>{{friend.nombre}} {{friend.apellido}}</p>
+        </div>
+      </ion-item>
+    </ion-list>
+    
+    <ion-list *ngIf="!chatting">
+      <ion-item>
+        <ion-searchbar [formControl]="searchBar"></ion-searchbar>
+      </ion-item>
+      <ion-item *ngFor="let chatroom of chatrooms" class="pointer">
+        <div class="circle chat-thumbnail" (click)="goChatroom(chatroom)">
+          <img src="{{getFriendImage(chatroom)}}" />
+        </div>
+        <div class="nombre-amigo" (click)="goChatroom(chatroom)">
+          <p>{{ getChatroomName(chatroom) }}</p>
+        </div>
+        <ion-icon slot="end" name="trash-outline" (click)="eliminarAlert(chatroom)" size="small" class="pointer"></ion-icon>
+      </ion-item>
+      <ion-item *ngIf="chatrooms && chatrooms.length == 0">
+        Nada por aquí, busca algún amigo para iniciar una conversación.
+      </ion-item>
+    </ion-list>
+  
+  </ion-card>
 </ion-content>
 
 <ion-footer *ngIf="chatting">
@@ -73,15 +78,15 @@
     <img src="{{mediaUrl}}">
   </ion-thumbnail>
 
-  <ion-toolbar color="light">
-    <ion-row class="ion-align-items-center">
-      <ion-col size="2">
-        <ion-button expand="block" fill="clear" color="secondary"
+    <ion-toolbar color="light">
+      <ion-row class="ion-align-items-center">
+        <ion-col size="2">
+          <ion-button expand="block" fill="clear" color="secondary"
           class="msg-btn">
-
+          
           <label for="fileInput" class="label-input cursor"><ion-icon name="camera-outline" slot="icon-only"></ion-icon></label>
           <input type="file" id="fileInput" (change)="uploadImage($event.target.files)" class="ion-hide"/>
-
+          
         </ion-button>
       </ion-col>
       <ion-col size="8">
@@ -90,11 +95,11 @@
       </ion-col>
       <ion-col size="2">
         <ion-button expand="block" fill="clear" color="primary" [disabled]="newMsg === '' && mediaUrl === ''"
-          class="msg-btn" (click)="enviarMessage()">
+        class="msg-btn" (click)="enviarMessage()">
           <ion-icon name="send" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
-  </ion-toolbar>
+    </ion-toolbar>
 </ion-footer>
 
