--- a/src/app/eventos/eventos.page.scss
+++ b/src/app/eventos/eventos.page.scss
@@ -22,3 +22,14 @@ ion-item::part(native) {
   padding-left: 0;
   /** and lots more **/
 }
+.card-eventos{
+  background:white;
+  width: 50%;
+  margin: 0 auto;
+}
+
+@media(max-width: 745px){
+  .card-eventos{
+    width: 100%;
+  }
+}
