--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -67,7 +67,7 @@
 <ion-card >
   <ion-card-content style="background-color: white;" *ngIf="publicaciones.value.length == 0">
     <img style="height: 15rem; margin-left: auto;margin-right: auto; display: block;" src="../../assets/img/lobito.png">
-    <ion-label style="text-align: center; display: block;">Nada interesante por aqui</ion-label>
+    <ion-label style="text-align: center; display: block;">Aún no hay publicaciones :(</ion-label>
   </ion-card-content>
 </ion-card>
 
