--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -16,11 +16,13 @@
                   <img [src]="amigo.imagenPerfil">
                 </ion-avatar>
                 <ion-label> {{ amigo.nombre }} {{ amigo.apellido }}</ion-label>
-                <ion-button routerLink="/perfil/{{amigo.idPersona}}">
+                <ion-button style="--background:#3f83a8"  routerLink="/perfil/{{amigo.idPersona}}">
                   <ion-icon name="person-circle-outline" slot="icon-only"></ion-icon>
                 </ion-button>
               </ion-item>
             </ion-list>
+            <ion-spinner color="tertiary" style="top: 50%;left: 50%;" *ngIf="isLoading" name="circles" ></ion-spinner>
+            
             <ion-infinite-scroll threshold="15%" (ionInfinite)="getSugerirAmigos($event)">
               <ion-infinite-scroll-content
                 id="null"
