--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -30,6 +30,9 @@
         </div>
       </ion-item>
     </ion-list>
+
+
+
     
     <ion-list *ngIf="!chatting">
       <ion-item>
@@ -44,6 +47,7 @@
         </div>
         <ion-icon slot="end" name="trash-outline" (click)="eliminarAlert(chatroom)" size="small" class="pointer"></ion-icon>
       </ion-item>
+      <ion-spinner color="tertiary" style="top: 50%;left: 50%;" *ngIf="!chatrooms" name="circles" ></ion-spinner>
       <ion-item *ngIf="chatrooms && chatrooms.length == 0">
         Nada por aquí, busca algún amigo para iniciar una conversación.
       </ion-item>
