--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -1,43 +1,21 @@
 <app-navbar></app-navbar>
 <ion-content>
   <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" size-xs="12" >
-        <ion-card style="background: white">
-          <ion-card-header color=tertiary style="background:#022833">
-            <ion-card-title  class="ion-text-center header">Configuración de Notificaciones por Email</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
-              <ion-item *ngIf="config.key !== 'idPersona' && config.key !== 'idConfiguracion' ">
-                <ion-label> {{ config.key }} </ion-label>
-                <ion-checkbox place-right checked={{config.value}} (click)="checkedChanged(config.key, config.value)"></ion-checkbox>
-              </ion-item>
-            </ion-list>
-            <ion-item>
-              <ion-button style="--background:#3f83a8" slot="end" (click)="onAplicar()">APLICAR</ion-button>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col size-sm="6" size-xs="12" >
-        <ion-card style="background: white">
-          <ion-card-header color=tertiary style="background:#022833">
-            <ion-card-title  class="ion-text-center header">Configuración de Notificaciones Mobile</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
-              <ion-item *ngIf="config.key !== 'idPersona' && config.key !== 'idConfiguracion'">
-                <ion-label> {{ config.key }} </ion-label>
-                <ion-checkbox place-right checked={{config.value}} (click)="checkedChanged(config.key, config.value)"></ion-checkbox>
-              </ion-item>
-            </ion-list>
-            <ion-item>
-              <ion-button style="--background:#3f83a8" slot="end" (click)="onAplicar()">APLICAR</ion-button>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+    <ion-tabs>
+      <ion-tab-bar slot="bottom" class="tabsClass">
+        <ion-tab-button tab="emailNotifications">
+          <ion-icon name="mail"></ion-icon>
+          <ion-label>EMAIL</ion-label>
+        </ion-tab-button>
+
+        <ion-tab-button tab="pushNotifications">
+          <ion-icon name="notifications-circle"></ion-icon>
+          <ion-label>PUSH</ion-label>
+        </ion-tab-button>
+
+
+      </ion-tab-bar>
+    </ion-tabs>
+
   </ion-grid>
 </ion-content>
