--- a/src/app/alta-administrador/alta-administrador.page.scss
+++ b/src/app/alta-administrador/alta-administrador.page.scss
@@ -8,8 +8,7 @@ ion-row{
   height: 100%;
 }
 
-ion-card-title{
-  text-align: center;
-  font-weight: bold;
-  text-transform: uppercase;
+.header{
+  font-family: 'big_noodle_titling';
+  font-size: 25px;
 }
