--- a/src/app/alta-administrador/alta-administrador.page.html
+++ b/src/app/alta-administrador/alta-administrador.page.html
@@ -3,10 +3,11 @@
     <ion-grid fixed>
       <ion-row>
         <ion-col size-xs="12" size-md="10" offset-md="1">
-          <ion-card>
+          <ion-card style="background: white">
+            <ion-card-header color=tertiary style="background:#022833">
+              <ion-card-title  class="ion-text-center header">Registrar Administrador</ion-card-title>
+            </ion-card-header>
             <ion-card-content>
-              <ion-card-title>Registrar administrador</ion-card-title>
-
               <ion-list class="form-input">
                 <ion-item>
                   <!-- <ion-input type="email" placeholder="Email" #txtEmail></ion-input> -->
