--- a/src/app/estadisticas/estadisticas.page.scss
+++ b/src/app/estadisticas/estadisticas.page.scss
@@ -1,3 +1,14 @@
 .welcome-card{
     background-color: white;
 }
+
+.wrapper{
+    display: grid;
+  grid-template-columns: auto auto;
+}
+
+.header{
+    font-family: 'big_noodle_titling';  
+    color:#212211;
+    font-size: 25px;
+  }
