--- a/src/app/interes/interes.page.html
+++ b/src/app/interes/interes.page.html
@@ -1,10 +1,10 @@
-<ion-content>
-  <ion-grid>
+<ion-content style="padding-top: 10px">
+  <ion-grid style="margin-top: 10px">
     <ion-row>
       <ion-col size-md="8" size-xs="12"  offset-md="2">
-        <ion-card style="background-color:white">
-          <ion-card-header color=tertiary>
-            <ion-card-title  class="ion-text-center">Intereses</ion-card-title>
+        <ion-card style="background-color:white;">
+          <ion-card-header color=tertiary style="background:#022833">
+            <ion-card-title  class="ion-text-center header">Intereses</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-item>
@@ -12,7 +12,7 @@
               <ion-input type="text" id="input-reason" [(ngModel)]="interes.interes" placeholder="Ej: Deportes al aire libre"></ion-input>
             </ion-item>
             <div  class="ion-margin-vertical ion-text-right">
-                <ion-button class="item-end" id="btn-confirm" [disabled]="enableCreate()" (click)=onCreateInteres()>
+                <ion-button style="--background:#3f83a8" class="item-end" id="btn-confirm" [disabled]="enableCreate()" (click)=onCreateInteres()>
                   <ion-icon slot="start" name="add"></ion-icon>Añadir interés</ion-button>
             </div>
             <div >
@@ -25,7 +25,7 @@
             </div>
             <ion-item-divider>
               <ion-label>
-                Lista de intereses:
+                Lista de intereses
               </ion-label>
             </ion-item-divider>
             <ion-list>
@@ -34,7 +34,7 @@
                 <ion-button (click)="onModificarInteres(inte.idInteres, inte.interes)">
                   <ion-icon name="create" slot="icon-only" ></ion-icon>
                 </ion-button>
-                <ion-button (click)="onDeleteInteres(inte.idInteres)">
+                <ion-button color="danger" (click)="onDeleteInteres(inte.idInteres)">
                   <ion-icon name="trash" slot="icon-only" ></ion-icon>
                 </ion-button>
               </ion-item>
