--- a/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
+++ b/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
@@ -3,8 +3,8 @@
     <ion-row>
       <ion-col size-md="6" offset-md="3">
           <ion-card style="background-color:white">
-            <ion-card-header color=tertiary>
-              <ion-card-title  class="ion-text-center">Usuarios registrados</ion-card-title>
+            <ion-card-header color=tertiary style="background:#022833">
+              <ion-card-title  class="ion-text-center header">Usuarios registrados</ion-card-title>
             </ion-card-header>
             <ion-card-content>
               <div  class="ion-margin-vertical ion-text-right">
