--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -1,7 +1,7 @@
 <div class="publicacion-wrapper" *ngFor="let publicacion of publicaciones.value">
   <ion-row class="wrapper" *ngIf="publicacion.tipo.tipo != 'mapa'">
     <ion-card class="card">
-      <ion-col class="edit-publicacion" size="1">
+      <ion-col *ngIf="userFire.id == usuario.value.idPersona" class="edit-publicacion" size="1">
         <ion-icon class="edit-publicacion-icon" (click)="presentPopover( $event, publicacion )" name="ellipsis-horizontal-circle-outline"></ion-icon>
       </ion-col>
       <ion-col size="5">
@@ -37,19 +37,18 @@
             </div>
           </ion-col>
         </ion-row>
-        <ion-row class="ion-justify-content-start reaccion-container">
-          <ion-col class="reaccion-col">
+        <ion-row class="ion-justify-content-start">
+          <!-- <ion-col class="reaccion-col">
             <ion-button class="reacciones" fill="clear" size="small" (click)="like(publicacion)">
               <ion-icon class="reaccion-icon" name="thumbs-up-outline" *ngIf="publicacion.cantidadLikes+1" slot="start"></ion-icon>
-              <!-- <ion-icon name="thumbs-up" *ngIf="!like" slot="start"></ion-icon> -->
-              <!-- <ion-icon name="heart-outline" slot="start"></ion-icon> -->
+              <ion-icon name="thumbs-up" *ngIf="!like" slot="start"></ion-icon>
               {{publicacion.cantidadLikes}}
             </ion-button>
           </ion-col>
           <ion-col class="reaccion-col">
             <ion-button class="reacciones" fill="clear" (click)="dislike(publicacion)" size="small">
               <ion-icon class="reaccion-icon" name="thumbs-down-outline" *ngIf="publicacion.cantidadDislikes+1" slot="start"></ion-icon>
-              <!-- <ion-icon name="thumbs-down" *ngIf="!dislike" slot="start"></ion-icon> -->
+              
               {{publicacion.cantidadDislikes}}
             </ion-button>
           </ion-col>
@@ -58,7 +57,11 @@
               <ion-icon class="reaccion-icon" name="chatbubble-outline" slot="start"></ion-icon>
               {{publicacion.cantidadComentarios}}
             </ion-button>
-          </ion-col>
+          </ion-col> -->
+          <ion-button style="display: block;margin-left: auto;" href="/comentarios-publicacion/{{publicacion.idPublicacion}}" color="dark" fill="clear" shape="round">
+            Ver más 
+            <ion-icon name="arrow-redo-outline"></ion-icon>
+          </ion-button>
         </ion-row>
       </ion-col>
     </ion-card>
@@ -70,7 +73,3 @@
     <ion-label style="text-align: center; display: block;">Aún no hay publicaciones :(</ion-label>
   </ion-card-content>
 </ion-card>
-
-<!-- <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
-  <ion-infinite-scroll-content></ion-infinite-scroll-content>
-</ion-infinite-scroll> -->
