--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
@@ -25,10 +25,24 @@
     color: #212221;
   }
 
-  .header{
-    
-  }
-
   .reacciones{
     margin-top:0;
+  }
+
+  .wrapper {
+    border-bottom: 1px solid var(--ion-color-light);
+    background: white;
+    margin-bottom: 15px;
+    border-radius: 10px;
+  }
+
+  .handle {
+    padding-left: 4px;
+    color: var(--ion-color-medium);
+    font-family: Gotham;
+    font-size: 18px;
+  }
+
+  .tweet-info {
+    font-size: 0.9em;
   }
