--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <ion-menu side="end" contentId="mainMenu">
     <ion-header>
       <ion-toolbar>
-        <ion-title class="ion-text-center">
+        <ion-title class="ion-text-center" routerLink="./home">
           TravelPack
         </ion-title>
       </ion-toolbar>
