--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -110,6 +110,29 @@ ion-item {
   height: 100%;
 }
 
+.item-chat-grupal {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: -10px;
+  font-size: 1em;
+
+  .chat-grupal {
+    width: 100%;
+    text-align: center;
+    font-size: 1em;
+    max-height: 40px;
+
+    .circle-chat-grupal {
+      height: 40px;
+      width: 30px;
+    }
+
+    .nombre-amigo-grupal {
+      max-width: 150px;
+    }
+  }
+}
+
 @media(max-width: 745px){
   .chat-card{
     width:100%;
