--- a/src/app/estadisticas/estadisticas.page.html
+++ b/src/app/estadisticas/estadisticas.page.html
@@ -1,15 +1,17 @@
+
+
 <ion-content>
   <ion-grid>
     <ion-card style="background: white">
       <ion-card-header color=tertiary style="background:#022833">
         <ion-card-title  class="ion-text-center header">Dashboard</ion-card-title>
       </ion-card-header>
-      
+
     <ion-row>
       <ion-col sizeSm="12" sizeMd="6" >
         <ion-card class="welcome-card" >
           <ion-card-header>
-            <ion-card-subtitle>Cantidad de usuarios en la app</ion-card-subtitle>
+            <ion-card-subtitle>Vista General</ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
             <canvas #barChart></canvas>
@@ -25,15 +27,13 @@
           <ion-card-content>
             <canvas #barCanvas></canvas>
           </ion-card-content>
-        </ion-card> 
+        </ion-card>
       </ion-col>
-        
-      
 
   </ion-row>
 
   <ion-row>
-    
+
     <ion-col sizeSm="12" sizeMd="6" >
       <ion-card class="welcome-card">
         <ion-card-header>
@@ -54,7 +54,7 @@
             <canvas #doughnutCanvas style="position: relative; height:20vh; width:40vw"></canvas>
           </ion-card-content>
         </ion-card>
-      </ion-col>  
+      </ion-col>
     </ion-row>
     </ion-card>
   </ion-grid>
