--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,12 @@
   <ion-menu side="end" contentId="mainMenu">
     <ion-header>
       <ion-toolbar>
-        <ion-title class="ion-text-center" routerLink="./home">
+        <ion-title class="ion-text-center header" routerLink="./home">
           TravelPack
-        </ion-title>
+          <ion-avatar class="logo">
+            <img src="../../../assets/icon/Logo.png">
+          </ion-avatar>
+        </ion-title>        
       </ion-toolbar>
     </ion-header>
 
