--- a/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.html
+++ b/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.html
@@ -42,3 +42,8 @@
   </ion-row>
 </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
