--- a/src/app/admin-page/admin-page.page.html
+++ b/src/app/admin-page/admin-page.page.html
@@ -39,3 +39,8 @@
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
