--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -124,4 +124,8 @@
     </ion-row>
     </ion-toolbar>
 </ion-footer>
-
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
