--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -63,3 +63,8 @@
     </ion-grid>
   </form>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
