--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -19,3 +19,8 @@
 
   </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
