--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -37,3 +37,8 @@
     </ion-row>
   </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
