--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -161,3 +161,8 @@
     </ion-grid>
   </ion-card>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
