--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -30,3 +30,8 @@
     </ion-list>
   </ion-card>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
