--- a/src/app/galeria/galeria.page.html
+++ b/src/app/galeria/galeria.page.html
@@ -21,3 +21,8 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
