--- a/src/app/modificar-perfil/modificar-perfil.page.html
+++ b/src/app/modificar-perfil/modificar-perfil.page.html
@@ -80,3 +80,8 @@
     </ion-grid>
   </form>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>TravelPack © 2021</ion-title>
+  </ion-toolbar>
+</ion-footer>
