--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu disabled="userApp.nickname != ''" side="end" contentId="mainMenu">
+  <ion-menu side="end" contentId="mainMenu">
     <ion-header>
       <ion-toolbar>
         <ion-title class="ion-text-center header" routerLink="./home">
