--- a/src/app/admin-page/admin-page.page.scss
+++ b/src/app/admin-page/admin-page.page.scss
@@ -2,6 +2,6 @@
   background-color: #FFF;
 }
 ion-tab-bar{
-  overflow-x: scroll;
-  justify-content: left;
+  //overflow-x: scroll;
+  //justify-content: left;
 }
