--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -37,7 +37,7 @@
     </ion-row>
   </ion-grid>
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
