--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -124,7 +124,7 @@
     </ion-row>
     </ion-toolbar>
 </ion-footer>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
