--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -30,7 +30,7 @@
     </ion-list>
   </ion-card>
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
