--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -34,8 +34,9 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
