--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -19,7 +19,7 @@
 
   </ion-grid>
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
