--- a/src/app/admin-page/admin-page.page.html
+++ b/src/app/admin-page/admin-page.page.html
@@ -39,7 +39,7 @@
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
