--- a/src/app/admin-page/admin-page.page.scss
+++ b/src/app/admin-page/admin-page.page.scss
@@ -5,3 +5,8 @@ ion-tab-bar{
   //overflow-x: scroll;
   //justify-content: left;
 }
+@media (max-width: 600px){
+  .mobile-style{
+    display:none;
+  }
+}
