--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -161,7 +161,7 @@
     </ion-grid>
   </ion-card>
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
