--- a/src/app/eventos/eventos.page.scss
+++ b/src/app/eventos/eventos.page.scss
@@ -18,6 +18,12 @@ h1 {
   font-size: 25px;
 }
 
+@media (max-width: 600px){
+  .mobile-style{
+    display:none;
+  }
+}
+
 ion-item::part(native) {
   //WRITE ALL YOUR CSS RULES HERE
   padding-left: 0;
