--- a/src/app/galeria/galeria.page.scss
+++ b/src/app/galeria/galeria.page.scss
@@ -14,3 +14,8 @@
     display: inline-block; 
     line-height: normal;
 }
+@media (max-width: 600px){
+    .mobile-style{
+      display:none;
+    }
+  }
