--- a/src/app/intereses-usuario-comun/intereses-usuario-comun.page.scss
+++ b/src/app/intereses-usuario-comun/intereses-usuario-comun.page.scss
@@ -2,3 +2,8 @@
     font-family: "big_noodle_titling";
     font-size: 25px;
 }
+@media (max-width: 600px){
+    .mobile-style{
+      display:none;
+    }
+  }
