--- a/src/app/listar-contactos/listar-contactos.page.scss
+++ b/src/app/listar-contactos/listar-contactos.page.scss
@@ -6,3 +6,9 @@
   font-family: "big_noodle_titling";
   font-size: 25px;
 }
+
+@media (max-width: 600px){
+  .mobile-style{
+    display:none;
+  }
+}
