--- a/src/app/modificar-perfil/modificar-perfil.page.html
+++ b/src/app/modificar-perfil/modificar-perfil.page.html
@@ -80,7 +80,7 @@
     </ion-grid>
   </form>
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
