--- a/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
+++ b/src/app/visualizar-ubicaciones/visualizar-ubicaciones.page.html
@@ -13,7 +13,7 @@
 </ion-grid>
 
 </ion-content>
-<ion-footer>
+<ion-footer class="mobile-style">
   <ion-toolbar>
     <ion-title>TravelPack © 2021</ion-title>
   </ion-toolbar>
